monitoring-k8s/nginx-ingress/ingress-controller-netpol-grafana.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nexus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app: nginx-ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 204.153.155.151/32
    ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
